--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "path": "0.12.7",
-    "pg": "6.1.0"
+    "pg": "6.1.0",
+    "request": "2.83.0"
   }
 }
