--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "alertify.js": "1.0.12",
     "angular": "1.6.6",
     "angular-route": "1.6.6",
+    "angular-tooltips": "^1.2.2",
     "bcrypt": "1.0.3",
     "body-parser": "1.18.2",
     "dotenv": "4.0.0",
